fix: horizontal scroll

--- a/apps/100ms-web/src/index.css
+++ b/apps/100ms-web/src/index.css
@@ -26,6 +26,7 @@ body,
 
 ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
   background-color: transparent;
 }
 
